ipc/ipdl/test/ipdl/ok/Pmaybe_OfActorsSub.ipdl
include protocol Pmaybe_OfActors;

protocol Pmaybe_OfActorsSub {
    manager Pmaybe_OfActors;

child: async __delete__();
};
